build failed with "--enable-stats" due to use void function as bool function like below if (!_dbus_list_get_stats (&in_use, &in_free_list, &allocated) || ...
Created attachment 81157 [details] [review] [PATCH] Fix build failure if build with "--enable-stats"
Fixed in git for 1.7.6, thanks. Regression in master, no backport needed.
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.